Adding coveralls + travis badge
We should have the travis badge now (build will fail, but the tests are actually being run correctly).

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,12 @@ git:
   depth: 1
 
 install:
+  - pip install coveralls
   - pip install nose
   - pip install .
   
 script:
-  - nosetests tests/
+  - nosetests --with-coverage --cover-package tests/
+
+after_success:
+  coveralls
