--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,7 @@ install:
   - pip install .
   
 script:
-  - nosetests tests/
-  - coverage run -m unittest tests.test_utils
+  - nosetests --with-coverage --cover-package opendir_dl tests/
 
 after_success:
   coveralls
