--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ language: python
 python:
   -  "2.7"
 
+cache: pip
+
 git:
   depth: 1
 
@@ -14,7 +16,7 @@ install:
   - pip install .
   
 script:
-  - nosetests --with-coverage --cover-package opendir_dl tests/
+  - make test
 
 after_success:
   coveralls
