Install lxml from wheel during CI builds
Found a copy of an lxml wheel, got it hosted on the opendir-dl website, and am just installing it from there.

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ git:
 install:
   - pip install coveralls
   - pip install nose
+  - pip install --use-wheel --no-index --find-links http://opendir-dl.com/wheels/lxml-3.6.4-cp27-cp27mu-manylinux1_x86_64.whl lxml
   - pip install .
   
 script:
