--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
   - pip install coveralls
   - pip install nose
   - wget "http://opendir-dl.com/wheels/lxml-3.6.4-cp27-cp27mu-manylinux1_x86_64.whl"
-  - pip install --use-wheel --no-index --trusted-host opendir-dl.com --find-links lxml-3.6.4-cp27-cp27mu-manylinux1_x86_64.whl lxml
+  - pip install ./lxml-3.6.4-cp27-cp27mu-manylinux1_x86_64.whl
   - pip install .
   
 script:
