--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,9 @@ language: python
 python:
   - "2.7"
 
-cache: pip
+cache:
+  directories:
+   - "$HOME/.cache/pip"
 
 git:
   depth: 1
@@ -13,8 +15,6 @@ git:
 install:
   - pip install coveralls
   - pip install nose
-  - wget "http://opendir-dl.com/wheels/lxml-3.6.4-cp27-cp27mu-manylinux1_x86_64.whl"
-  - pip install ./lxml-3.6.4-cp27-cp27mu-manylinux1_x86_64.whl
   - pip install .
   
 script:
