--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,6 @@
 [nosetests]
 where=tests
 with-coverage=1
+cover-html=1
+cover-html-dir=../coverage_html
 cover-package=opendir_dl
-#cover-config-file=.coveragerc
