--- a/.travis.yml
+++ b/.travis.yml
@@ -14,10 +14,10 @@ git:
 
 install:
   - pip install -U pip wheel
+  - pip install -r requirements.txt
   - pip install coveralls
-  - pip install nose
   - pip install .
-  
+
 script:
   - make test
 
